formulaire de création d'évenement OK + envoie des données vers l'API OK

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1 class="text-center"> Family Event Finance </h1>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecd8e0;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Family Event Finance</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="accueil" routerLink="/evenement" routerLinkActive="active" ariaCurrentWhenActive="page">Accueil</a>
+        <a class="nav-link" href="ajout" routerLink="/creatEvenement" routerLinkActive="active" ariaCurrentWhenActive="page">Ajouter</a>
+        <a class="nav-link" href="modif" routerLink="/modifEvenement" routerLinkActive="active" ariaCurrentWhenActive="page">Modifier l'évenement</a>
+        <a class="nav-link" href="supprimer" routerLink="/suppEvenement" routerLinkActive="active" ariaCurrentWhenActive="page">Supprimer l'évenement</a>
+
+      </div>
+    </div>
+  </div>
+</nav><br/>
+<!--<div [ngStyle]="{backgroundImage:'url(../assets/images/neveuxNiecesNounou.jpg)'}" >-->
+<!--</div>-->
 <router-outlet></router-outlet>
 
