--- a/src/app/creat-evenement/creat-evenement.component.html
+++ b/src/app/creat-evenement/creat-evenement.component.html
@@ -1,17 +1,25 @@
-<form [formGroup]="evenementForm" (ngSubmit)="creatEvenement()">
-  <div class="form-group">
+<form [formGroup]="evenementForm" (ngSubmit)="submitEvenement()">
+  <div class="form-group col-auto">
     <label for="name">Nom de l'évenement: </label>
-    <input id="name" type="text" class="form-control" formControlName="libelle">
+    <div class="col-sm-10">
+      <input id="name" type="text" class="form-control" formControlName="libelle" placeholder="Entrez le nom de l'évenement">
+    </div>
   </div>
-  <div class="form-group">
+  <div class="form-group col-auto">
     <label for="date">Date de l'évenement: </label>
-    <input id="date" type="date" class="form-control" formControlName="date_creation">
+    <div class="col-sm-10">
+      <input id="date" type="date" class="form-control" formControlName="date_creation">
+    </div>
   </div>
-  <div class="formGroup">
+  <div class="formGroup col-auto">
     <label for="lieu">Lieu de l'évenement: </label>
-    <input id="lieu" type="text" class="form-control" formControlName="lieu">
+    <div class="col-sm-10">
+      <input id="lieu" type="text" class="form-control" formControlName="lieu" placeholder="Entrez le lieu de l'évenement">
+    </div>
+  </div><br/>
+  <div class="col-sm-10">
+    <button type="submit" class="btn-outline-primary">Ajouter</button>
   </div>
-  <button type="submit" class="btn-outline-primary">Créer</button>
 </form>
 
 <pre>
