delete de ce qui ne sert pas + variabilisation des URL + redirect vers accueil quand modif faite

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,10 @@
         <a class="nav-link" href="#" routerLink="/creatEvenement"
            routerLinkActive="active" ariaCurrentWhenActive="page">Ajouter</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="/modifEvenement"
-           routerLinkActive="active" ariaCurrentWhenActive="page">Modifier l'évenement</a>
-      </li>
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="#" routerLink="/modifEvenement"-->
+<!--           routerLinkActive="active" ariaCurrentWhenActive="page">Modifier l'évenement</a>-->
+<!--      </li>-->
     </ul>
   </div>
 </nav><br/>
