--- a/src/app/creat-evenement/creat-evenement.component.html
+++ b/src/app/creat-evenement/creat-evenement.component.html
@@ -18,7 +18,7 @@
     </div>
   </div><br/>
   <div class="col-sm-10">
-    <button type="submit" class="btn-outline-primary">Ajouter</button>
+    <button type="submit" class="btn-outline-primary">Valider</button>
   </div>
 </form>
 
