--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--<div [ngStyle]="{backgroundImage:'url(../assets/images/neveuxNiecesNounou.jpg)'}" >-->
 <!--</div>-->
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecd8e0;">
-  <a class="navbar-brand" href="#">Family Event Finance</a>
+  <a class="navbar-brand" href="#">Fé Po l'Compte</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
