--- a/src/app/creat-evenement/creat-evenement.component.html
+++ b/src/app/creat-evenement/creat-evenement.component.html
@@ -1,24 +1,30 @@
 <form [formGroup]="evenementForm" (ngSubmit)="submitEvenement()">
+  <input type="hidden" formControlName="id">
   <div class="form-group col-auto">
     <label for="name">Nom de l'évenement: </label>
     <div class="col-sm-10">
-      <input id="name" type="text" class="form-control" formControlName="libelle" placeholder="Entrez le nom de l'évenement">
+      <input id="name" type="text" class="form-control" formControlName="name" placeholder="Entrez le nom de l'évenement">
     </div>
   </div>
   <div class="form-group col-auto">
     <label for="date">Date de l'évenement: </label>
     <div class="col-sm-10">
-      <input id="date" type="date" class="form-control" formControlName="date_creation">
+      <input id="date" type="date" class="form-control" formControlName="date">
     </div>
   </div>
   <div class="formGroup col-auto">
-    <label for="lieu">Lieu de l'évenement: </label>
+    <label for="place">Lieu de l'évenement: </label>
     <div class="col-sm-10">
-      <input id="lieu" type="text" class="form-control" formControlName="lieu" placeholder="Entrez le lieu de l'évenement">
+      <input id="place" type="text" class="form-control" formControlName="place" placeholder="Entrez le lieu de l'évenement">
     </div>
   </div><br/>
   <div class="col-sm-10">
     <button type="submit" class="btn-outline-primary">Valider</button>
+  </div>
+  <div class="row">
+    <div class="col-sm-3">
+      <button type="button" class="btn btn-outline-danger" (click)="suppEvenement()">Supprimer</button>
+    </div>
   </div>
 </form>
 
