creation d'un nouveau component vierge + directive pour ne pas afficher le bouton supprimer dans la creation de l'evenement + petite déco pour aligner les boutons de validation et suppression d'un évènement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
            routerLinkActive="active" ariaCurrentWhenActive="page">Ajouter</a>
       </li>
 <!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="#" routerLink="/modifEvenement"-->
+<!--        <a class="nav-link" href="#" routerLink="/evenement/:id"-->
 <!--           routerLinkActive="active" ariaCurrentWhenActive="page">Modifier l'évenement</a>-->
 <!--      </li>-->
     </ul>
