--- a/src/app/creat-evenement/creat-evenement.component.html
+++ b/src/app/creat-evenement/creat-evenement.component.html
@@ -18,12 +18,14 @@
       <input id="place" type="text" class="form-control" formControlName="place" placeholder="Entrez le lieu de l'évenement">
     </div>
   </div><br/>
-  <div class="col-sm-10">
-    <button type="submit" class="btn-outline-primary">Valider</button>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-      <button type="button" class="btn btn-outline-danger" (click)="suppEvenement()">Supprimer</button>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-9">
+        <button type="submit" class="btn btn-outline-primary">Valider</button>
+      </div>
+      <div class="col-sm-3">
+        <button *ngIf="idEvenement" type="button" class="btn btn-outline-danger" (click)="suppEvenement()">Supprimer</button>
+      </div>
     </div>
   </div>
 </form>
