#8 ajout des participants à un évènement bien précis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ecd8e0;">
   <a class="navbar-brand" href="#">
-    <img src="assets/images/logoApp.png" width="70" height="70" class="d-inline-block align-top" alt="logo de l'application">
+    <img src="assets/images/logoApp.png" width="70" height="70" class="d-inline-block align-top" alt="logo de l'application">&nbsp;&nbsp;
   </a>
   <h3>Fé Po l'Compte &nbsp;</h3>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
