#14 affichage du titre approprié suivant si on est sur la modif ou la creation d un evenement

--- a/src/app/evenement/evenement.component.html
+++ b/src/app/evenement/evenement.component.html
@@ -9,7 +9,7 @@
 
     <dt class="col-sm-3">Nombre de participants ? </dt>
     <dd class="col-sm-9">
-      <p>Vous serez au nombre de : {{evenement.participantDTOList?.size}}</p>
+      <p>Vous serez au nombre de : {{evenement.participantDTOList.size}}</p>
     </dd>
 <!--    <dt class="col-sm-3 text-truncate">Combien ? </dt>-->
 <!--    <dd class="col-sm-9"> Le montant total de cet évènement est de : {{evenement.total}}</dd>-->
