--- a/src/app/creat-evenement/creat-evenement.component.html
+++ b/src/app/creat-evenement/creat-evenement.component.html
@@ -1,46 +1,51 @@
-<div>
-  <h1 style="text-align: center">Modifiez l'évènement</h1><br/>
+<div *ngIf="isCreation">
+  <h1 id="add" style="text-align: center">{{titleAdd}}</h1><br/>
+  </div>
+<div *ngIf="!isCreation">
+  <h1 style="text-align: center">{{titleModify}}</h1><br/>
 </div>
 <form [formGroup]="evenementForm" (ngSubmit)="submitEvenement()">
   <input type="hidden" formControlName="id">
   <div class="form-group col-auto">
     <label for="name">Nom de l'évenement: </label>
-    <div class="col-sm-10">
+    <div class="col-sm-9">
       <input id="name" type="text" class="form-control" formControlName="name" placeholder="Entrez le nom de l'évenement">
     </div>
   </div>
   <div class="form-group col-auto">
     <label for="date">Date de l'évenement: </label>
-    <div class="col-sm-10">
+    <div class="col-sm-9">
       <input id="date" type="date" class="form-control" formControlName="date">
     </div>
   </div>
   <div class="formGroup col-auto">
     <label for="place">Lieu de l'évenement: </label>
-    <div class="col-sm-10">
+    <div class="col-sm-9">
       <input id="place" type="text" class="form-control" formControlName="place" placeholder="Entrez le lieu de l'évenement">
     </div>
   </div><br/>
   <br/>
   <hr><br/>
   <div>
-    <h1 style="text-align: center">Quels seront les participants à cet évènement ? </h1><br/>
+    <h1 style="text-align: center">Qui participera à cet évènement ? </h1><br/>
   </div><br/>
 
   <div *ngFor="let participant of participants"  class="form-check">
 <!--    <label class="form-check-label" for="selectedParticipants">-->
-      <input type="checkbox" class="form-check-input position-static" formArrayName="participants" [value]="participant.id" (change)="onCheckboxChange($event)">
+      <input type="checkbox" class="form-check-input position-static"
+             formArrayName="participants" [value]="participant.id"
+             (change)="onCheckboxChange($event)" style="margin: auto;">
      {{participant.nom}}&nbsp;{{participant.prenom}}&nbsp;{{participant.email}} <!--  </label>-->
   </div><br/>
+  <hr><br/>
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-9">
-        <button type="submit" class="btn btn-outline-primary float-end">Valider</button>
+        <button type="submit" class="btn btn-outline-primary float-end">Valider l'évènement</button>
       </div>
     </div>
   </div>
 </form>
-<hr>
 <pre>
   {{evenementForm.value | json }}
 </pre>
