--- a/src/app/evenementList/evenementList.component.html
+++ b/src/app/evenementList/evenementList.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 style="text-align: center;">Récap des évenements organisés</h1><br/>
+  <h1>Récap des évenements organisés</h1><br/>
   <div class="table-responsive row">
     <table class="table table-hover">
       <thead class="thead-light">
@@ -23,6 +23,6 @@
     </table>
   </div>
   <div class="container-fluid">
-    <button type="submit" class="btn btn-outline-primary" (click)="redirectToAddEvent()">Ajouter</button>
+    <button type="submit" class="btn btn-outline-primary float-end" (click)="redirectToAddEvent()">Ajouter</button>
   </div>
 </div>
