--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -7,12 +7,8 @@
       <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="wxyz@wxyz.fr">
     </div>
     <div class="form-group">
-      <label for="surname">Nom</label>
-      <input type="text" class="form-control" id="surname" placeholder="Nom" [(ngModel)]="surname">
-    </div>
-    <div class="form-group">
-      <label for="forename">Prénom</label>
-      <input type="text" class="form-control" id="forename" placeholder="Prénom" [(ngModel)]="forename">
+      <label for="password">Mot de Passe</label>
+      <input type="password" class="form-control" id="password" placeholder="Mot de Passe" [(ngModel)]="password" [ngModelOptions]="{standalone:true}">
     </div>
     <button type="submit" class="btn btn-primary mb-2" (click)="login()">Connexion</button>
   </form>
